added a couple patterns, tweaked a few small things

--- a/wp-content/themes/nu-start/acf-blocks/nav-menu/nav-menu.css
+++ b/wp-content/themes/nu-start/acf-blocks/nav-menu/nav-menu.css
@@ -2,9 +2,10 @@
 	ACF Nav Menu Block styling
 	see php function nu__getMenu()
 */
-.nu__navmenu ul {
-  list-style-type: none;
+.nu__navmenu > .navlinks > .menu {
+  flex-flow: column nowrap;
 }
+
 body.wp-admin .nu__navmenu a {
   pointer-events: none;
 }
