--- a/wp-content/themes/nu-start/acf-blocks/nav-menu/nav-menu.scss
+++ b/wp-content/themes/nu-start/acf-blocks/nav-menu/nav-menu.scss
@@ -5,18 +5,18 @@
 //?
 .nu__navmenu {
 
-	ul {
-		list-style-type: none;
-		// padding: 0;
-	}
+	> .navlinks {
 
-	li.menu-item-has-children  {
-		ul {
-			// padding-left: $base-margin;
+		> .menu {
+			flex-flow: column nowrap;
 		}
 	}
-
 }
+	
+
+
+
+// ? disable clicking links in the editor
 body.wp-admin {
 	.nu__navmenu {
 		a {
