--- a/wp-content/themes/nu-start/__precomp/source/css/gutenberg/patterns/_index.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/gutenberg/patterns/_index.scss
@@ -3,6 +3,8 @@
 @import './heros';
 @import './stat-highlights';
 @import './testimonials';
+@import './newsletter-sections';
+@import './faq-sections';
 
 
 
