working out how to answer nav links on pages used as archives

--- a/wp-content/themes/nu-start/__precomp/source/css/gutenberg/_index.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/gutenberg/_index.scss
@@ -3,3 +3,11 @@
 @import './patterns';
 @import './reusables';
 @import './content-types';
+
+
+.has-background {
+	padding: $margin_2x;
+	@media screen and (max-width: 781px) {
+		padding: $base-margin;
+	}
+}
