--- a/wp-content/themes/nu-start-child/src/styles/_index.scss
+++ b/wp-content/themes/nu-start-child/src/styles/_index.scss
@@ -5,3 +5,22 @@
 // ? @import "./files-to-import/here";
 
 // 
+
+%link_is_active {
+	span {
+		border-bottom: 2px solid $black;
+	}
+}
+
+body.page-id-350 {
+
+	.people-cat-1 {
+		@extend %link_is_active;
+	}
+}
+body.page-id-360 {
+	
+	.people-cat-2 {
+		@extend %link_is_active;
+	}
+}
